# CMakeCompileQtProject

./: .gitignore  CMakeLists-qt5.txt  CMakeLists.txt  Hello_worl.pro  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
